plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.119'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories.clear()

repositories {
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://neoforged.forgecdn.net/releases"
    }
    maven {
        url = "https://neoforged.forgecdn.net/mojang-meta"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
    maven {
        url "https://cursemaven.com"
    }
    maven {
        name = "Create Maven"
        url "https://maven.createmod.net"
    }
    maven {
        name = "EngineRoom Maven"
        url "https://maven.engine-room.dev/releases"
    }
    flatDir {
        dir 'libs'
    }
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "maven.modrinth:kaleidoscope-cookery:1.4.1-neoforge+mc1.21.1"
    compileOnly "curse.maven:jei-238222:7420587"
    runtimeOnly "curse.maven:jei-238222:7420587"
    compileOnly "maven.modrinth:emi:1.1.24+1.21.1+neoforge"
//    runtimeOnly "maven.modrinth:emi:1.1.24+1.21.1+neoforge"
    compileOnly "maven.modrinth:rei:16.0.799+neoforge"
//    runtimeOnly "maven.modrinth:rei:16.0.799+neoforge"
    implementation "maven.modrinth:architectury-api:13.0.8+neoforge"
    implementation "maven.modrinth:artifacts:13.2.0"

    compileOnly "maven.modrinth:curios:9.5.1+1.21.1"
    compileOnly "maven.modrinth:lets-do-farm-charm:1.1.21"
    compileOnly "maven.modrinth:lets-do-vinery:1.5.3"

    compileOnly "maven.modrinth:gensokyo-delight-youkais-feasts:1.1.0"

    compileOnly "maven.modrinth:kaleidoscopetavern:1.1.2-neoforge+mc1.21.1"
    compileOnly "maven.modrinth:botany-pots:21.1.41"
    compileOnly "maven.modrinth:farmers-delight:1.21.1-1.3.2"
    compileOnly "maven.modrinth:kaleidoscope-nether:1.0.6-neoforge+mc1.21.1"
    implementation "maven.modrinth:kaleidoscope-end:1.0.2-neoforge+mc1.21.1"
    implementation "maven.modrinth:kubejs:2101.7.2-build.348"
    compileOnly "maven.modrinth:thirst-was-taken:1.21.1-2.1.5"
    implementation "maven.modrinth:kaleidoscope-doll:1.3.1-neoforge+mc1.21.1"
//    implementation "maven.modrinth:bountiful-fares:3.0.8"
    compileOnly "maven.modrinth:quark:4.1-479"
    implementation "maven.modrinth:zeta:1.1-39"
    compileOnly "maven.modrinth:accessories:1.1.0-beta.53+1.21.1"
    implementation "maven.modrinth:owo-lib:0.12.15.5-beta.1+1.21"
//    implementation "maven.modrinth:l_enders-cataclysm:3.24"
//    compileOnly "maven.modrinth:create-central-kitchen:2.3.0"
    compileOnly "maven.modrinth:create:6.0.10+mc1.21.1"
    compileOnly "maven.modrinth:create-dragons-plus:1.8.7"
    compileOnly "net.createmod.ponder:ponder-neoforge:1.0.81+mc1.21.1"
    compileOnly "maven.modrinth:mystical-agriculture:8.0.24"
    implementation "maven.modrinth:cucumber:8.0.15"
//    compileOnly "maven.modrinth:lets-do-brewery-farmcharm-compat:2.1.8"
    compileOnly "curse.maven:spice-of-life-carrot-edition-277616:7374098"
//    compileOnly "maven.modrinth:ars-nouveau:5.11.3"
    compileOnly "maven.modrinth:appleskin:3.0.9+mc1.21"
    compileOnly "maven.modrinth:cloth-config:15.0.140+neoforge"
    compileOnly "maven.modrinth:spectrum:1.11.8-1.21.1-neo"
    compileOnly "maven.modrinth:touhou-little-maid:1.5.3-neoforge+mc1.21.1"
    compileOnly "maven.modrinth:patchouli:1.21.1-93-neoforge"

    runtimeOnly "maven.modrinth:farmers-delight:1.21.1-1.3.2"
    runtimeOnly "maven.modrinth:gensokyo-delight-youkais-feasts:1.1.0"
    runtimeOnly "maven.modrinth:botany-pots:21.1.41"
//    runtimeOnly "maven.modrinth:kaleidoscope-nether:1.0.7-neoforge+mc1.21.1"
    runtimeOnly "maven.modrinth:kaleidoscopetavern:1.1.2-neoforge+mc1.21.1"
    runtimeOnly "maven.modrinth:lets-do-vinery:1.5.3"
    runtimeOnly "maven.modrinth:lets-do-farm-charm:1.1.21"
    runtimeOnly "maven.modrinth:quark:4.1-479"
//    runtimeOnly "maven.modrinth:accessories:1.1.0-beta.53+1.21.1"
//    runtimeOnly "maven.modrinth:create-central-kitchen:2.3.0"
    runtimeOnly "maven.modrinth:create:6.0.10+mc1.21.1"
//    runtimeOnly "maven.modrinth:create-dragons-plus:1.8.7"
    runtimeOnly "maven.modrinth:curios:9.5.1+1.21.1"
    runtimeOnly "maven.modrinth:mystical-agriculture:8.0.24"
//    runtimeOnly "maven.modrinth:lets-do-brewery-farmcharm-compat:2.1.8"
//    runtimeOnly "curse.maven:spice-of-life-carrot-edition-277616:7374098"
//    runtimeOnly "maven.modrinth:ars-nouveau:5.11.3"
    runtimeOnly "maven.modrinth:appleskin:3.0.9+mc1.21"
//    runtimeOnly "maven.modrinth:thirst-was-taken:1.21.1-2.1.5"
    runtimeOnly "maven.modrinth:cloth-config:15.0.140+neoforge"
    runtimeOnly "maven.modrinth:spectrum:1.11.8-1.21.1-neo"
    implementation "maven.modrinth:spectrumjei:21.1.9+neoforge"
    runtimeOnly "maven.modrinth:touhou-little-maid:1.5.3-neoforge+mc1.21.1"
    runtimeOnly "maven.modrinth:patchouli:1.21.1-93-neoforge"
    implementation fileTree("libs")
            jarJar(implementation("blank:resourcefulconfig:neoforge-1.21-3.0.11"))
//    implementation "maven.modrinth:resourceful-config:3.0.11"
//    jarJar("maven.modrinth:resourceful-config:3.0.11") {
//        version {
//            strictly "[3.0.11,)"
//            prefer "3.0.11"
//        }
//    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
